results/SVCOMP/specgen/log-instanceof1-2024_02_27_16_05_58.txt
class Main {
  //@ requires args != null;
  //@ ensures \result == (args instanceof Object);
  public static boolean f() {
    return args instanceof Object;
  }
}
/home/max/Documents/JMLGPT/tmp/instanceof1.java:2: error: cannot find symbol
  //@ requires args != null;
               ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof1.java:3: error: cannot find symbol
  //@ ensures \result == (args instanceof Object);
                          ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof1.java:5: error: cannot find symbol
    return args instanceof Object;
           ^
  symbol:   variable args
  location: class Main
3 errors

class Main {
  //@ ensures \result == false;
  public static boolean f() {
    return args instanceof Object;
  }
}
/home/max/Documents/JMLGPT/tmp/instanceof1.java:4: error: cannot find symbol
    return args instanceof Object;
           ^
  symbol:   variable args
  location: class Main
1 error

class Main {
  //@ ensures \result == false;
  public static boolean f() {
    return false;
  }
}

